--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,38 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Google Font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="./assets/css/bootstrap.min.css"/>
+	<!-- <link rel="stylesheet" href="./assets/css/font-awesome.min.css"/> -->
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+	<link rel="stylesheet" href="./assets/css/flaticon.css"/>
+	<link rel="stylesheet" href="./assets/css/owl.carousel.min.css"/>
+	<link rel="stylesheet" href="./assets/css/animate.css"/>
+	<link rel="stylesheet" href="./assets/css/style.css"/>
+
+	<!-- slick -->
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+
+
 </head>
 <body>
   <app-root></app-root>
 </body>
+<!-- js -->
+<script src="./assets/js/jquery-3.2.1.min.js"></script>
+<script src="./assets/js/bootstrap.min.js"></script>
+<script src="./assets/js/owl.carousel.min.js"></script>
+<script src="./assets/js/circle-progress.min.js"></script>
+<script src="./assets/js/main.js"></script>
+
+<!-- slick -->
+<script src="//unpkg.com/slick-carousel@1.8.1/slick/slick.js"></script>
+
 </html>
